TST-234 Modified find modals so that you can tell there's more than 1 option Added modal-results class to properly set height on small screens Fixed issue where the modal footer was hidden on very small phones Fixed issue where modal went off-screen on small laptops Adjusted styles to work with the new height better and more responsively

--- a/assets/scss/custom/layout/_find-a-consultant.scss
+++ b/assets/scss/custom/layout/_find-a-consultant.scss
@@ -4,6 +4,17 @@
 /* Choose A Consultant Styles  */
 #modal {
     #consultant-search {
+        .genmodal-body {
+            max-height:none;
+            .buy-wide-card.name-search {
+                .card-form {
+                    flex-wrap:wrap;
+                    button {
+                        margin-top:.5rem;
+                    }
+                }
+            }
+        }
         .findmodal-footer {
             background: none;
             box-shadow: none;
@@ -15,6 +26,7 @@
     }
     #consultant-search-results {
         display: none;
+        height:100%;
         .frameheading-5 {
             font-family: stencilFontFamily("headings-font");
         }
