--- a/assets/scss/custom/layout/_find-a-party.scss
+++ b/assets/scss/custom/layout/_find-a-party.scss
@@ -21,7 +21,7 @@
             display: none;
             .genmodal-body {
                 position:relative;
-                overflow-y:hidden;
+                overflow-y:scroll;
                 .buy-wide-card {
                     .party-card {
                         width:100%;
